[gd_scene load_steps=5 format=3 uid="uid://nry8efljju0p"]

[ext_resource type="Script" uid="uid://cmyehj55a6d41" path="res://animated_pipes/pipe_segment.gd" id="1_p1bq0"]
[ext_resource type="Texture2D" uid="uid://cmyrpki54fn7e" path="res://texture/pipe_fill_sprites.png" id="2_buc5m"]
[ext_resource type="Texture2D" uid="uid://x3jstnt0p3gk" path="res://texture/pipe_water_sprites.png" id="3_unp86"]
[ext_resource type="Texture2D" uid="uid://c32wpg4q000mq" path="res://texture/pipe_outline_sprites.png" id="4_4i8fm"]

[node name="PipeSegment" type="Node2D"]
script = ExtResource("1_p1bq0")

[node name="Fill" type="Sprite2D" parent="."]
unique_name_in_owner = true
rotation = -3.14159
texture = ExtResource("2_buc5m")
vframes = 3
frame = 2

[node name="Water" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0.1, 1, 0.576471)
rotation = -3.14159
texture = ExtResource("3_unp86")
flip_h = true
hframes = 26
vframes = 3
frame = 52

[node name="Outline" type="Sprite2D" parent="."]
unique_name_in_owner = true
rotation = -3.14159
texture = ExtResource("4_4i8fm")
vframes = 3
frame = 2

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 1.0
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[connection signal="ready" from="." to="." method="_on_ready"]
